--- a/assets/main.css
+++ b/assets/main.css
@@ -7,7 +7,7 @@ html {
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
-    background-color: #000;
+    background-color: transparent;
 }
 
 body {
@@ -20,7 +20,7 @@ body {
     overflow-x: hidden;
     width: 100%;
     max-width: 100%;
-    background-color: #000;
+    background-color: transparent;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -47,7 +47,6 @@ body {
     min-height: -webkit-fill-available;
     z-index: -100;
     pointer-events: none;
-    background-color: #000;
 }
 
 #video-background {
@@ -61,7 +60,6 @@ body {
     z-index: -50;
     overflow: hidden;
     pointer-events: none;
-    background-color: #000;
 }
 
 #video-background iframe {
