--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -162,66 +162,16 @@
             position: fixed;
             top: 0;
             left: 0;
-            width: 100vw;
-            height: 100vh;
-            overflow: hidden;
+            width: 100%;
+            height: 100%;
+            z-index: -50;
+            object-fit: cover;
             opacity: 0;
-            transition: opacity 0.3s ease-in;
-            pointer-events: none;
-            background-color: #000;
-            z-index: 2;
-        }
-        
-        @supports (-webkit-touch-callout: none) {
-            /* iOS specific - scale to cover bottom bar */
-            #video-background {
-                width: 100vw;
-                height: 100vh;
-            }
-        }
-        
-        #video-background iframe {
-            position: absolute !important;
-            top: 0 !important;
-            left: 50% !important;
-            width: 177.78vh !important;
-            height: 100vh !important;
-            min-width: 100vw !important;
-            min-height: 100vh !important;
-            transform: translateX(-50%) !important;
-            border: none !important;
-        }
-        
-        #video-background.mobile-embed iframe {
-            position: absolute !important;
-            top: 0 !important;
-            left: 50% !important;
-            width: 177.78vh !important;
-            height: 100vh !important;
-            min-width: 100vw !important;
-            min-height: 100vh !important;
-            transform: translateX(-50%) !important;
+            transition: opacity 0.5s ease-in;
         }
 
-        @media (max-width: 767px) {
-            #video-background {
-                top: 0 !important;
-                left: 0 !important;
-                width: 100vw !important;
-                height: 100vh !important;
-            }
-            
-            #video-background iframe {
-                position: absolute !important;
-                top: 0 !important;
-                left: 50% !important;
-                width: 177.78vh !important;
-                height: 100vh !important;
-                min-width: 100vw !important;
-                min-height: 100vh !important;
-                transform: translateX(-50%) !important;
-                border: none !important;
-            }
+        #video-background.loaded {
+            opacity: 1 !important;
         }
 
         .header {
@@ -305,20 +255,8 @@
             }
         }
         
-        #video-background.loaded {
-            opacity: 1;
-        }
-        
         #video-background.mobile-embed {
             background-color: #000;
-        }
-
-        #video-background.mobile-embed iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
         }
     </style>
 </head>
@@ -379,11 +317,6 @@
                 });
             }
         })();
-        
-        // Vimeo player initialization stub - kept for compatibility
-        (function() {
-            const DESKTOP_VIDEO_URL = 'https://vimeo.com/1047666931/e9bd2fa0b0';
-            const MOBILE_VIDEO_URL = 'https://vimeo.com/1061053405/3faa6f7993';
     </script>
 
     <div class="header">
